# test-python-extensions

./: CMakeLists.txt  README.md
foo/: __init__.py
src/: core.cpp
